welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:20: error: not found: value faireDiagAv
  faireDiagAv(Color.GREEN)
  ^