welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  def marqueSol() {
    baisseBrosse()
    gauche(); droite()
    leveBrosse()
  }
  
  def faireDiagAV(c:Color) {
    setCouleurBrosse(c)
    marqueSol()
    avance()
    gauche()
    avance()
    marqueSol()
    recule()
    droite()
    recule()
  }
  
  faireDiagAv(Color.GREEN)
}